--- a/bounce.html
+++ b/bounce.html
@@ -5,5 +5,8 @@
   <svg width="100" height="100">
     <circle cx="50" cy="50" r="40" fill="white" />
   </svg>
+   <svg id=svg2 width="100" height="100">
+   	<circle id=cir2 cx="50" cy="50" r="40" fill="red" />
+   </svg>
   <div class="header">Welcome to my awesome site!</div>
 </body>
